fix: whitespacing

--- a/style.css
+++ b/style.css
@@ -1,1 +1,4 @@
-/* Coming soon */
+html, body{
+    padding: 0;
+    margin: 0;
+}
